style.css
:root {
	--ff-arial: 'Poppins', Courier;
	--fw-light: 400;
	--fw-medium: 700;
	--fw-bold: 800;
	--fs-verySmall: 0.6rem;
	--fs-small: 0.8rem;
	--fs-medium: 1.5rem;
	--fs-large: 5rem;

	--clr-primary-purple: hsl(259, 100%, 65%);
	--clr-primary-red: hsl(0, 100%, 67%);

	--clr-neutral-white: hsl(0, 0%, 100%);
	--clr-neutral-offWhite: hsl(0, 0%, 94%);
	--clr-neutral-lightGrey: hsl(0, 0%, 86%);
	--clr-neutral-smokeyGrey: hsl(0, 1%, 44%);
	--clr-neutral-offBlack: hsl(0, 0%, 8%);
}
*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}
body {
	min-height: 100dvh;
	background-color: var(--clr-neutral-offWhite);
	display: flex;
	justify-content: center;
	align-items: center;
	font-family: var(--ff-arial);
}
.card {
	max-width: 70dvw;
	background-color: var(--clr-neutral-white);
	padding: 2rem;
	border-radius: 1rem 1rem 5rem 1rem;
}

/* user input  */

.grid-form-box {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	gap: 0.3rem;
	padding-right: 10rem;
}

#day,
#month,
#year {
	grid-row-start: 3;
	font-size: var(--fs-verySmall);
}
.grid-form-box input {
	grid-row-start: 2;
	max-width: 5rem;
	font-size: var(--fs-medium);
	padding: 0.4em;
	border-color: var(--clr-neutral-lightGrey);
}

.submit-button {
	min-width: 32rem;
	display: flex;
	align-items: center;
	position: relative;
	padding-block: 3rem;
}

.line {
	min-width: 100%;
	border-bottom: solid var(--clr-neutral-lightGrey) 1px;
}

button {
	background-color: var(--clr-primary-purple);
	border: none;
	padding: 1rem;
	border-radius: 50%;
	position: absolute;
	right: 0px;
	cursor: pointer;
}

button:hover {
	background-color: black;
}

small {
	color: red;
}

/* display digits */
.display-date {
	font-size: var(--fs-large);
	font-style: italic;
}
.display-date span {
	color: var(--clr-primary-purple);
}

.error-display {
	display: none; /* Hide error messages by default */
	color: red;
}

